# spatialite

./: .gitignore  .gitmodules  CMakeLists.txt  config-msvc.h  config.h  config.h.cmake
examples/: CMakeLists.txt  demo5.c
src/gaiaaux/: gg_utf8.c
src/gaiageo/: gg_extras.c  gg_shape.c
